--- a/book-history.html
+++ b/book-history.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>BROADWAY CINEMAS</title>
+  <title>BROADWAY CINEMAS - 百老匯影城</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="css/global.min.css" />
@@ -12,199 +12,227 @@
 </head>
 
 <body class="no-scroll">
-  <header>
-    <nav id="nav">
-      <input type="checkbox" id="toggle" class="input-toggler" />
-      <div class="sidebar-overlay"></div>
-      <label for="toggle" class="menu-toggler">
-        <span class="menu-toggler-line"></span>
-        <span class="menu-toggler-line"></span>
-        <span class="menu-toggler-line"></span>
-      </label>
-      <div class="sidebar">
-        <a class="nav-brand" href="index.html">Navbar</a>
-        <!-- navbar for pc  -->
-        <div class="forpc">
-          <ul class="menu">
-            <li>
-              <a class="menu-link" href="#">線上訂票</a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">公館場次查詢</a></li>
-                <li><a class="dropdown-item" href="#">新竹場次查詢</a></li>
-              </ul>
-            </li>
-            <li>
-              <a class="menu-link" href="#">電影介紹</a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">現正熱映</a></li>
-                <li><a class="dropdown-item" href="#">即將上映</a></li>
-              </ul>
-            </li>
-            <li><a class="menu-link -active" href="#">最新消息</a></li>
-            <li><a class="menu-link" href="#">業務專區</a></li>
-            <li><a class="menu-link" href="#">關於影城</a></li>
-          </ul>
-          <!-- login/logout style user-account toggle class 'isUser'/none   -->
-          <div class="user-account">
-            <div class="user">
-              HELLO! <span class="user-name">Yick</span><span class="material-icons"> person </span><span
-                class="material-icons"> menu </span>
-            </div>
-            <div class="account-sub">
-              <hr />
-              <a href="">訂票查詢與取消</a>
-              <a href="">會員資料</a>
-              <a href="">會員優惠PLUS</a>
-            </div>
-            <div class="user-login">
-              <a href="#login">會員登入</a>
-            </div>
-            <div class="user-regist">
-              <a href="#regist">加入會員</a>
-            </div>
-
+<header>
+  <nav id="nav">
+    <input type="checkbox" id="toggle" class="input-toggler" />
+    <div class="sidebar-overlay"></div>
+    <label for="toggle" class="menu-toggler">
+      <span class="menu-toggler-line"></span>
+      <span class="menu-toggler-line"></span>
+      <span class="menu-toggler-line"></span>
+    </label>
+    <div class="sidebar">
+      <a class="nav-brand" href="index.html">
+        <h1>LOGO</h1>
+      </a>
+      <!-- navbar for pc  -->
+      <div class="forpc">
+        <ul class="menu">
+          <li>
+            <a class="menu-link" href="#" title="線上訂票">線上訂票</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#" title="公館場次查詢">公館場次查詢</a></li>
+              <li><a class="dropdown-item" href="#" title="新竹場次查詢">新竹場次查詢</a></li>
+            </ul>
+          </li>
+          <li>
+            <a class="menu-link" href="#" title="電影介紹">電影介紹</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#" title="現正熱映">現正熱映</a></li>
+              <li><a class="dropdown-item" href="#" title="即將上映">即將上映</a></li>
+            </ul>
+          </li>
+          <li><a class="menu-link -active" href="#" title="最新消息">最新消息</a></li>
+          <li><a class="menu-link" href="#" title="業務專區">業務專區</a></li>
+          <li><a class="menu-link" href="#" title="關於影城">關於影城</a></li>
+        </ul>
+        <!-- login/logout style user-account toggle class 'isUser'/none   -->
+        <div class="user-account">
+          <div class="user">
+            HELLO! <span class="user-name">Yick</span><span class="material-icons"> person </span><span
+              class="material-icons"> menu </span>
           </div>
+          <div class="account-sub">
+            <hr />
+            <a href="" title="訂票查詢與取消">訂票查詢與取消</a>
+            <a href="" title="會員資料">會員資料</a>
+            <a href="" title="會員優惠PLUS">會員優惠PLUS</a>
+          </div>
+          <div class="user-login">
+            <a href="#login" title="會員登入">會員登入</a>
+          </div>
+          <div class="user-regist">
+            <a href="#regist" title="加入會員">加入會員</a>
+          </div>
+
         </div>
       </div>
-    </nav>
-    <!-- 登入modal -->
-    <div class="modal" id="login">
-      <div class="modal-content">
-        <p>WELCOME TO BROADWAY!</p>
-        <div class="modal-info">
-          <form action="">
-            <div class="info">
-              <label for="loginid">帳號（電子郵件信箱）</label>
-              <input type="text" id="loginid" placeholder="aaabbb@gmail.com">
-            </div>
-            <div class="info">
-              <label for="loginpassword">登入密碼 <a href="" class="forgetpwd">
-                  <span class="material-icons">error</span> FORGOT PASSWORD</a></label>
-              <input type="password" id="loginpassword" placeholder="PASSWORD">
-              <label for="lockpwd" class="xs-font container-checkbox lockpwd">
-                記住密碼
-                <input type="checkbox" name="lockpwd" id="lockpwd">
-                <span class="checkmark"></span>
-              </label>
-            </div>
-            <div class="info safeverify">
-              <label for="">安全驗證</label>
-              <div>
-                <input type="text" placeholder=" 請輸入右方驗證碼">
-                <div class="imgsafe">
-                  <img src="https://picsum.photos/g/150/40" alt="">
-                  <a href=""><span class="material-icons">sync</span></a>
-                </div>
+    </div>
+  </nav>
+  <!-- 登入modal -->
+  <div class="modal" id="login">
+    <div class="modal-content">
+      <p>WELCOME TO BROADWAY!</p>
+      <div class="modal-info">
+        <form action="">
+          <div class="info">
+            <label for="loginid">帳號（電子郵件信箱）</label>
+            <input type="text" id="loginid" placeholder="aaabbb@gmail.com">
+          </div>
+          <div class="info">
+            <label for="loginpassword">登入密碼 <a href="" class="forgetpwd">
+                <span class="material-icons">error</span> FORGOT PASSWORD</a></label>
+            <input type="password" id="loginpassword" placeholder="PASSWORD">
+            <label for="lockpwd" class="xs-font container-checkbox lockpwd">
+              記住密碼
+              <input type="checkbox" name="lockpwd" id="lockpwd">
+              <span class="checkmark"></span>
+            </label>
+          </div>
+          <div class="info safeverify">
+            <label for="">安全驗證</label>
+            <div>
+              <input type="text" placeholder=" 請輸入右方驗證碼">
+              <div class="imgsafe">
+                <img src="https://picsum.photos/g/150/40" alt="">
+                <a href=""><span class="material-icons">sync</span></a>
               </div>
             </div>
-            <div class="info submmitbtn">
-              <button>LOGIN</button>
-              <a href="#regist" class="xs-font">尚未申請帳號！馬上註冊!</a>
-            </div>
-          </form>
-        </div>
-        <a href="#" class="close-modal"><span class="material-icons">close</span></a>
+          </div>
+          <div class="info submmitbtn">
+            <button>LOGIN</button>
+            <a href="#regist" class="xs-font">尚未申請帳號！馬上註冊!</a>
+          </div>
+        </form>
       </div>
+      <a href="#" class="close-modal"><span class="material-icons">close</span></a>
     </div>
-    <!-- 註冊modal -->
-    <div class="modal" id="regist">
-      <div class="modal-content">
-        <p>WELCOME TO BROADWAY!JOIN US!</p>
-        <div class="modal-info">
-          <form action="">
-            <div class="info">
-              <label for="registid">帳號（電子郵件信箱)<span class="required-icon">*</span></label>
-              <input type="text" id="registid" required="required" placeholder="aaabbb@gmail.com">
-            </div>
-            <div class="info">
-              <label for="phone">聯絡電話<span class="required-icon">*<span
-                    class="xs-font">將以此帳號作為日後訂單聯繫，請務必填寫正確</span></span></label>
-              <input type="number" id="phone" required="required" placeholder="091234567">
-            </div>
-            <div class="info">
-              <label for="setpwd">設定密碼<span class="required-icon">*</span></label>
-              <input type="password" id="passetpwdsword" required="required" placeholder="請輸入6-10位含大小寫英數字">
-            </div>
-            <div class="info">
-              <label for="confirmpwd">確認密碼<span class="required-icon">*</span></label>
-              <input type="password" id="confirmpwd" required="required" placeholder="請再次確認密碼">
-            </div>
-            <div class="info">
-              <label for="confirmrule" class="xs-font container-checkbox">
-                我同意 會員條款｜應用程式使用條款｜個人資料使用條款
-                <input type="checkbox" id="confirmrule" required="required">
-                <span class="checkmark"></span>
-              </label>
-            </div>
-            <div class="info submmitbtn">
-              <button>REGISTER</button>
-              <a href="#login" class="xs-font">已有帳號！馬上登入</a>
-            </div>
-          </form>
-        </div>
-        <a href="#" class="close-modal"><span class="material-icons">close</span></a>
+  </div>
+  <!-- 註冊modal -->
+  <div class="modal" id="regist">
+    <div class="modal-content">
+      <p>WELCOME TO BROADWAY!JOIN US!</p>
+      <div class="modal-info">
+        <form action="">
+          <div class="info">
+            <label for="registid">帳號（電子郵件信箱)<span class="required-icon">*</span></label>
+            <input type="text" id="registid" required="required" placeholder="aaabbb@gmail.com">
+          </div>
+          <div class="info">
+            <label for="phone">聯絡電話<span class="required-icon">*<span
+                  class="xs-font">將以此帳號作為日後訂單聯繫，請務必填寫正確</span></span></label>
+            <input type="number" id="phone" required="required" placeholder="091234567">
+          </div>
+          <div class="info">
+            <label for="setpwd">設定密碼<span class="required-icon">*</span></label>
+            <input type="password" id="passetpwdsword" required="required" placeholder="請輸入6-10位含大小寫英數字">
+          </div>
+          <div class="info">
+            <label for="confirmpwd">確認密碼<span class="required-icon">*</span></label>
+            <input type="password" id="confirmpwd" required="required" placeholder="請再次確認密碼">
+          </div>
+          <div class="info">
+            <label for="confirmrule" class="xs-font container-checkbox">
+              我同意 會員條款｜應用程式使用條款｜個人資料使用條款
+              <input type="checkbox" id="confirmrule" required="required">
+              <span class="checkmark"></span>
+            </label>
+          </div>
+          <div class="info submmitbtn">
+            <button>REGISTER</button>
+            <a href="#login" class="xs-font">已有帳號！馬上登入</a>
+          </div>
+        </form>
       </div>
+      <a href="#" class="close-modal"><span class="material-icons">close</span></a>
     </div>
-  </header>
+  </div>
+</header>
 
   <div class="section-box">
     <section class="section">
-      <div class="content">
+      <div class="content booking-history">
         <div class="main-title l-font">
           <div class="s-font">BOOKING HISTORY</div>
           <div>訂票查詢與取消</div>
         </div>
         <div class="tab">
-          <div class="tab-list"></div>
+          <div class="tab-list l-font active">尚未取票</div>
+          <button class="tab-list l-font">完成觀看</button>
+          <button class="tab-list l-font">已取消</button>
         </div>
-        <div class="content-row booking-history">
-          <div class="row-left row-2">
-            <img src="https://fakeimg.pl/250x350/" alt="" />
-          </div>
-          <div class="row-right row-8">
-            <div class="ticket-no">取票序號<span>#123456789</span></div>
-            <div class="movie-title">
-              <p class="l-font ellipsis">劫命救護</p>
-              <span class="s-font ellipsis">AMBULANCE</span>
+        <div class="tab-content">
+          <div class="content-row item">
+            <div class="row-left row-2">
+              <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
             </div>
-            <div class="booking-list content-row">
-              <div class="row-6">
-                <div class="list"><label>觀看影城</label><span>台北公館百老匯</span></div>
-                <div class="list"><label>觀看時間</label><span>2022.08.08 星期一</span></div>
-                <div class="list"><label>電影場次</label><span>12:30 標準數位 | 第12聽</span></div>
-                <div class="list"><label>電影票種</label><span>全票x1,優待票x3,愛心票x1,優待票x3,愛心票x1,優待票x3,愛心票x1</span></div>
-                <div class="list"><label>影城座位</label><span>12-07,12-8,12-09,12-11,12-12</span></div>
+            <div class="row-right row-8">
+              <div class="ticket-no">取票序號<span>#123456789</span></div>
+              <div class="movie-title">
+                <p class="l-font ellipsis">劫命救護</p>
+                <span class="s-font ellipsis">AMBULANCE</span>
               </div>
-              <div class="row-4">
-                <div class="list"><label>票卷數量</label><span>共2張</span></div>
-                <div class="list"><label>付款金額</label><span>NT$660</span></div>
-                <div class="list"><label>訂單時間</label><span>2022.12.11 22:25:06</span></div>
+              <div class="booking-list content-row">
+                <div class="row-5">
+                  <div class="list"><label>觀看影城</label><span>台北公館百老匯</span></div>
+                  <div class="list"><label>觀看時間</label><span>2022.08.08 星期一</span></div>
+                  <div class="list"><label>電影場次</label><span>12:30 標準數位 | 第12聽</span></div>
+                  <div class="list"><label>電影票種</label><span>全票x1,優待票x3,愛心票x1</span></div>
+                  <div class="list"><label>影城座位</label><span>12-07,12-8,12-09,12-11,12-12</span></div>
+                </div>
+                <div class="row-5">
+                  <div class="list"><label>票卷數量</label><span>共2張</span></div>
+                  <div class="list"><label>付款金額</label><span>NT$660</span></div>
+                  <div class="list"><label>訂單時間</label><span>2022.12.11 22:25:06</span></div>
+                </div>
+              </div>
+              <div class="ticket-state">
+                <div class="state paid">已付款<span class="material-icons">
+                  done
+                </span></div>
+                <div class="state getQR">取票碼<span class="material-icons">
+                  qr_code
+                </span></div>
+                <div class="state refund">退票<span class="material-icons">
+                  close
+                </span></div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="content-row booking-history">
-          <div class="row-left row-2">
-            <img src="https://fakeimg.pl/250x350/" alt="" />
-          </div>
-          <div class="row-right row-8">
-            <div class="ticket-no">取票序號<span>#123456789</span></div>
-            <div class="movie-title">
-              <p class="l-font ellipsis">劫命救護</p>
-              <span class="s-font ellipsis">AMBULANCE</span>
+          <div class="content-row item">
+            <div class="row-left row-2">
+              <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
             </div>
-            <div class="booking-list content-row">
-              <div class="row-6">
-                <div class="list"><label>觀看影城</label><span>台北公館百老匯</span></div>
-                <div class="list"><label>觀看時間</label><span>2022.08.08 星期一</span></div>
-                <div class="list"><label>電影場次</label><span>12:30 標準數位 | 第12聽</span></div>
-                <div class="list"><label>電影票種</label><span>全票x1,優待票x3,愛心票x1,優待票x3,愛心票x1,優待票x3,愛心票x1</span></div>
-                <div class="list"><label>影城座位</label><span>12-07,12-8,12-09,12-11,12-12</span></div>
+            <div class="row-right row-8">
+              <div class="ticket-no">取票序號<span>#123456789</span></div>
+              <div class="movie-title">
+                <p class="l-font ellipsis">劫命救護</p>
+                <span class="s-font ellipsis">AMBULANCE</span>
               </div>
-              <div class="row-4">
-                <div class="list"><label>票卷數量</label><span>共2張</span></div>
-                <div class="list"><label>付款金額</label><span>NT$660</span></div>
-                <div class="list"><label>訂單時間</label><span>2022.12.11 22:25:06</span></div>
+              <div class="booking-list content-row">
+                <div class="row-5">
+                  <div class="list"><label>觀看影城</label><span>台北公館百老匯</span></div>
+                  <div class="list"><label>觀看時間</label><span>2022.08.08 星期一</span></div>
+                  <div class="list"><label>電影場次</label><span>12:30 標準數位 | 第12聽</span></div>
+                  <div class="list"><label>電影票種</label><span>全票x1,優待票x3,愛心票x1</span></div>
+                  <div class="list"><label>影城座位</label><span>12-07,12-8,12-09,12-11,12-12</span></div>
+                </div>
+                <div class="row-5">
+                  <div class="list"><label>票卷數量</label><span>共2張</span></div>
+                  <div class="list"><label>付款金額</label><span>NT$660</span></div>
+                  <div class="list"><label>訂單時間</label><span>2022.12.11 22:25:06</span></div>
+                </div>
+              </div>
+              <div class="ticket-state">
+                <div class="state paid">已付款<span class="material-icons">
+                    done
+                  </span></div>
+                <div class="state getQR">取票碼<span class="material-icons">
+                    qr_code
+                  </span></div>
+                <div class="state refund">退票<span class="material-icons">
+                    close
+                  </span></div>
               </div>
             </div>
           </div>
